@@ -4,7 +4,7 @@
 	<property name="SRC" value="src"/>
 	<property name="BIN" value="bin"/>
 	<property name="LIB" value="lib"/>
-	<property name="PROG" value="Compiler"/>
+	<property name="PROG" value="Main"/>
 
 	<!-- Defining project classpath -->
 	<path id="project.classpath">
@@ -12,6 +12,7 @@
 		<fileset dir="${LIB}">
 			<include name="**/*.jar"/>
 		</fileset>
+		<pathelement location="css"/>
 	</path>
 
 	<target name="clean" description="Deleting bin directory">
@@ -65,6 +66,8 @@
 	<target name="run" description="Running the program" depends="compile">
 		<java classname="${PROG}" fork="true">
 			<classpath refid="project.classpath"/>
+			<jvmarg value="--module-path=lib"/>
+			<jvmarg value="--add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web"/>
 		</java>
 	</target>
 
